# News-Feed-Compiler

theweek/news-scrape/: README.md  pyproject.toml
theweek/news-scrape/news_website/: everything.csv  init_db.py  news_web.py  news_websites.db
theweek/news-scrape/news_website/templates/: news_summary.html  news_web.html
theweek/theweek-scrappers/: BBC.py  CNN.py  apnews.csv  apnews.py  bbc.csv  cnn.csv  everything.py  news.py  news_week.csv  reuters.csv  reuters.py  theconversation.csv  theconversation.py  theguardian.csv  theguardian.py  wikiNews.py
